Add chinese support, update other translations

--- a/war/src/main/resources/messages_ar_SA.properties
+++ b/war/src/main/resources/messages_ar_SA.properties
@@ -9,9 +9,9 @@ build.denied.zone.place = Ma T8dr T76 Blockat Fe WarZone
 build.denied.zone.type = Ma T8dr T3dl 3la H4a Al No3
 command.console = Ma T8dr Tswe H4a 3shank Mo Fe Al Game
 command.disabled = Ma T8dr Tktb Alla (/Leave) w Ant Tl3b
-command.tp.init = Alrja2 Ant9''ar {0} Thwany 8bl Ant8al. A4a Mshet Aw 9''rbk A7d By36l Ant8al.
+command.tp.init = Alrja2 Ant9'ar {0} Thwany 8bl Ant8al. A4a Mshet Aw 9'rbk A7d By36l Ant8al.
 command.tp.moved = Al Ant8al M36l 3shank Tmshy.
-command.tp.damaged = Al Ant8al M36l 3shan Al 9''rb
+command.tp.damaged = Al Ant8al M36l 3shan Al 9'rb
 command.tp.success = L8d Tm N8lk. Shkrn l 9brk
 drop.bomb.broadcast = \u200e{0}\u200e 6a7t, \u200e{1}\u200e  Al 8nblh!
 drop.bomb.disabled = Ma T8dr Trmy Shy w Ant Ma54 8nblh. Wsh 8a3d Tswe?! Ahrb l Spawn Al3do!
@@ -34,19 +34,19 @@ join.permission.all = Ma 3ndk 9la7yat l Ay Teams Fe H4e WarZone.
 join.permission.single = Ma 3ndk 9la7yat Td5l Team {0}
 join.progress = Ma T8dr Td5l Al7rb Bd2t Fe H4e Zone.
 join.selfteam = mat8dr td5l alteam 78k
-join.team404 = alteam 3''er mojod jrb aktb/ teams tshof 8a2mh alteams
+join.team404 = alteam 3'er mojod jrb aktb/ teams tshof 8a2mh alteams
 leave.broadcast = {0} 6l3 mn alzone.
 leave.inventoryrestore = 78ybtk tm astrja3ha
-pvp.death.drown = {0} 3''r8
+pvp.death.drown = {0} 3'r8
 pvp.death.explosion = {0} tfjr
 pvp.death.fall = {0}s86 wmat fj2h
 pvp.death.fire = \u200e{0}\u200e a7tr8 llshwa2
 pvp.death.other = {0} mat
 pvp.ff.disabled = hjomk fashl! hdfk m3k fe alfre8
-pvp.ff.enabled = alnyran al9de8h msh3''lh! alrja2 la to24e fre8k
+pvp.ff.enabled = alnyran al9de8h msh3'lh! alrja2 la to24e fre8k
 pvp.kill.adjectives = ;;al8wy;al8atl;b5er;d8e8;alw7shy;6a8h
 pvp.kill.bomb = \u200e{0}\u200eada ela \u200e{1}\u200e tfjer!
-pvp.kill.format = {0}''s{1}{2}{3}{4}
+pvp.kill.format = {0}'s{1}{2}{3}{4}
 pvp.kill.self = {0} ant7r
 pvp.kill.verbs = An8tl;An8tl;An8tl;Antha;Abed;8tl;Ams7;Abed
 pvp.kill.weapon.aim = Hdf
@@ -67,13 +67,13 @@ sign.team.limited = Fre8 \u200e{0}\u200e\n\u200e{1}\u200e/\u200e{2}\u200e La3ben
 sign.team.unlimited = fre8 {0}\u00a0\n{1}/{2} la3ben\n{3}/{4} n8a6\n7yah la nha2yh
 sign.warhub = War hub\u00a0\n(/warhub)\u00a0\na5tar al3bh
 sign.warzone = Warzone\u00a0\n{0}\u00a0\n{1}/{2} la3ben\n{3} afr8h
-team.chat.enable = Chat Al Fre8 Msh3''l. Byst8bl Rsayl Team 78k Bs.
+team.chat.enable = Chat Al Fre8 Msh3'l. Byst8bl Rsayl Team 78k Bs.
 team.chat.disable = Chat Al Fre8 M36l
 use.anvil = mat8dr tst3ml anvil fe h4a alwarzone!
 use.enchant = ma t8dr tst3ml 6awlh alt6wer fe h4a alwarzone!
 use.ender = mat8dr tst3ml enderchst w ant tl3b fe warzone!
 use.item.spawn = mat8dr tst3ml items w ant fe spawn
-use.xpkillmeter = h4a al xpkillmeter ymkn a5tyar tsh3''elh
+use.xpkillmeter = h4a al xpkillmeter ymkn a5tyar tsh3'elh
 wand.toofar = hdf alblockh b3ed jda.
 war.notadmin = mat8dr tswe h4a e4a ant mo admin fe war (permission war.admin).
 war.notzm = mat8dr tswe h4a e4a ant mo warzone maker ( permssion war.zonemaker).
@@ -82,7 +82,7 @@ war.title = War
 warhub.none = mafyh warhub fe h4a alserver. jrb /zone aw /zone.
 warhub.permission = ma3ndk 9la7yh al2nt8al ela war hub.
 warhub.teleport = ahla bk fe WarHub. a5tr l3btk
-zone.airstrike = {0} d3a fy 9''rbh jwyh !
+zone.airstrike = {0} d3a fy 9'rbh jwyh !
 zone.battle.end = alm3krh antht. fre8 {0} 5sr: {1} mat w lm ykn 7yah trkt lhm
 zone.battle.newscores = n8a6 jdedh - {0}
 zone.battle.next = al7rb antht . a3adh alwarzone {0} ...
@@ -98,11 +98,11 @@ zone.flagreturn.spawn = yjb 3lek an tstwle 3la 3lm 3dok ela bdayh fre8k
 zone.leavenotice = ast3ml /war leave 3shan t6l3 mn alzone
 zone.lifepool.empty = 7yat alfre8 \u200e{0}\u200e 5l9t . moth w7dh w y5sron al7rb
 zone.loadout.equip = mjhz \u200e{0}\u200e loadout ( tsll lld5ol )
-zone.loadout.reenter = mat8dr t3''er alloadout b3d 5rojk mn albdayh.
+zone.loadout.reenter = mat8dr t3'er alloadout b3d 5rojk mn albdayh.
 zone.monument.badblock = yjb 3lek alt8a6 al monument m3 block al9of 78 fre8k\n54 wa7d mn bdayh fre8k
 zone.monument.capture = Monument {0} tm alt8a6ha mn alfre8 {1}.
 zone.monument.lose = fre8 \u200e{0}\u200e f8d alsy6rh 3la monument  {1}
-zone.monument.voodoo = ant tr89 tr9''e al  monument''''s voodoo. ant ksbt {0} 8lob!
+zone.monument.voodoo = ant tr89 tr9'e al  monument''s voodoo. ant ksbt {0} 8lob!
 zone.noteamnotice = mat8dr tkon da5l alwarzone bdon fre8.
 zone.score.board404 = alwarzone mo mf3l alscoreboard.
 zone.score.empty = ant mat8dr ta54 score 7ta yd5l a7d alfre8 althany.
