--- a/war/src/main/resources/messages_et_EE.properties
+++ b/war/src/main/resources/messages_et_EE.properties
@@ -102,7 +102,7 @@ zone.loadout.reenter = V\u00e4ljalaadimist ei saa vahetada p\u00e4rast alguskoha
 zone.monument.badblock = Sa pead hankima kuju oma meeskonna v\u00e4rvi villaga
 zone.monument.capture = Monument {0} varastati tiimi {1} poolt.
 zone.monument.lose = Tiim {0} kaotas kontrolli monumendis {1}.
-zone.monument.voodoo = Sinu tants rahuldab kuju voodoo''d. Sa said {0} s\u00fcdant!
+zone.monument.voodoo = Sinu tants rahuldab kuju voodoo'd. Sa said {0} s\u00fcdant!
 zone.noteamnotice = Sa ei saa olla s\u00f5jatsooni sees kui sa ei ole \u00fcheski tiimis.
 zone.score.board404 = Selles s\u00f5jatsoonis ei ole lubatud skooritabel.
 zone.score.empty = Sa ei saa punkte kuni teise tiimi liitub m\u00f5ni m\u00e4ngija.
