--- a/war/src/main/resources/messages_fi.properties
+++ b/war/src/main/resources/messages_fi.properties
@@ -46,7 +46,7 @@ pvp.ff.disabled = Hy\u00f6kk\u00e4yksesi ep\u00e4onnistui! Kohteesi on joukkuees
 pvp.ff.enabled = Oma tuli on sallittu. \u00c4l\u00e4 satuta joukkuetovereitasi.
 pvp.kill.adjectives = ;;mahtava;kuolettava;upea;tarkka;brutaali;voimakas
 pvp.kill.bomb = {1} r\u00e4j\u00e4ytettiin {0} toimesta.
-pvp.kill.format = {0}''''s {1} {2} {3} {4}
+pvp.kill.format = {0}''s {1} {2} {3} {4}
 pvp.kill.self = {0} teki itsemurhan.
 pvp.kill.verbs = tappoi;tappoi;tappoi;viimeisteli;tuhosi;murhasi;h\u00e4vitti;tuhosi
 pvp.kill.weapon.aim = nuoli
