--- a/war/src/main/resources/messages_fy.properties
+++ b/war/src/main/resources/messages_fy.properties
@@ -2,22 +2,22 @@
 build.denied.location = Do kinst hjir net bouwe.
 build.denied.outside = Do kinst allinnich yn oarlochsgebieten bouwe.
 build.denied.teamblock = Do kinst allinnich de blokken fan dyn tiim br\u00fbke om monuminten te feroverjen.
-build.denied.zone.break = Do blokken dy''t yn dit oarlochsgebiet boud binne, binne unbrekber!
+build.denied.zone.break = Do blokken dy't yn dit oarlochsgebiet boud binne, binne unbrekber!
 build.denied.zone.multteam = Do hast al in {0} blok.
-build.denied.zone.outside = Do kinst in oarlochsgebiet w\u00ear''tsto net yn spilest net ferneatigje.
+build.denied.zone.outside = Do kinst in oarlochsgebiet w\u00ear'tsto net yn spilest net ferneatigje.
 build.denied.zone.place = Do kinst gjin blokken pleatsen yn dit oarlochsgebiet.
 build.denied.zone.type = Do kinst blokken fan dit type net oanpasse.
-command.console = Do kinst dit net dwaan at''sto net yn-spiel bist.
-command.disabled = Do kinst allinnich Oarlochkommando''s (lykas /leave) br\u00fbke at''sto oan it spilen bist.
+command.console = Do kinst dit net dwaan at'sto net yn-spiel bist.
+command.disabled = Do kinst allinnich Oarlochkommando's (lykas /leave) br\u00fbke at'sto oan it spilen bist.
 drop.bomb.broadcast = {0} hat de {1} bom fallen litten!
-drop.bomb.disabled = Do kinst gjin foarwerpen fallen litten at''sto de bom oan it stelle bist. Wat dochsto?! Rin nei de spawn fan dyn fij\u00e2n!
+drop.bomb.disabled = Do kinst gjin foarwerpen fallen litten at'sto de bom oan it stelle bist. Wat dochsto?! Rin nei de spawn fan dyn fij\u00e2n!
 drop.cake.broadcast = {0} hat de {1} cake fallen listen!
-drop.cake.disabled = Do kinst gjin foarwerpen fallen litten at''sto de cake oan it stelle bist. Wat dochsto?! Rin!
+drop.cake.disabled = Do kinst gjin foarwerpen fallen litten at'sto de cake oan it stelle bist. Wat dochsto?! Rin!
 drop.flag.broadcast = {0} hat de {1} flagge fallen litten!
-drop.flag.disabled = Do kinst gjin foarwerpen fallen litten at''sto de flag oan it stelle bist. Wat dochsto?! Rin!
-drop.item.border = Do kinst gjin foarwerpen fallen litten yn ''e buert fan de s\u00f4negrins.
+drop.flag.disabled = Do kinst gjin foarwerpen fallen litten at'sto de flag oan it stelle bist. Wat dochsto?! Rin!
+drop.item.border = Do kinst gjin foarwerpen fallen litten yn 'e buert fan de s\u00f4negrins.
 drop.item.disabled = Do kinst gjin foarwerpen fallen litten yn dit oarlochsgebiet.
-drop.item.spawn = Do kinst gjin foarwerpen fallen litten at''sto noch yn ''e spawn bist.
+drop.item.spawn = Do kinst gjin foarwerpen fallen litten at'sto noch yn 'e spawn bist.
 drop.team = Do kinst gjin {0} blokken fallen litten.
 drop.wand = Do hast de s\u00f4ne {0} st\u00eaf fallen litten.
 join.aarequired = Dit oarlochsgebiet ferplichtet dy om automatysk tawiisd te wurden oan in tiim. Gean asjebleaft nei de auto-tawiispoarte.
@@ -25,8 +25,8 @@ join.broadcast = {0} wie taheakke oan tiim {1}
 join.disabled = Dit oarlochsgebiet is \u00fatskeakele.
 join.full.all = Alle tiims binne fol.
 join.full.single = Tiim {0} is fol.
-join.inventorystored = Dyn ynventaris stiet yn ''e opslach oant datsto fuort geast mei /war leave.
-join.permission.all = Do hast gjin tastimming foar elts fan ''e beskikbere tiims yn dit oarlochsgebiet.
+join.inventorystored = Dyn ynventaris stiet yn 'e opslach oant datsto fuort geast mei /war leave.
+join.permission.all = Do hast gjin tastimming foar elts fan 'e beskikbere tiims yn dit oarlochsgebiet.
 join.permission.single = Do hast gjin tastimming om dysels ta te heakje oan team {0}.
 join.progress = Do kinst dysels net taheakje oan in dwaande striid yn dizze s\u00f4ne.
 join.selfteam = Do kinst dysels net taheakje oan dyn eigen tiim.
@@ -42,7 +42,7 @@ pvp.ff.disabled = Dyn oanfal miste! Dyn wyt is yn dyn tiim.
 pvp.ff.enabled = Freonlike fjoer stiet oan! Alsjebleaft, blessearje dyn tiimgenoaten net.
 pvp.kill.adjectives = ;;machtich;deadlik;fijn;presys;br\u00fat;kr\u00eaftich
 pvp.kill.bomb = {0} hat {1} opblaasd!
-pvp.kill.format = {0}''''s {1} {2} {3} {4}
+pvp.kill.format = {0}''s {1} {2} {3} {4}
 pvp.kill.self = {0} hat selsmoard plege
 pvp.kill.weapon.aim = rjochtsje
 pvp.kill.weapon.bow = b\u00f4ge
@@ -50,11 +50,11 @@ pvp.kill.weapon.hand = h\u00e2n
 pvp.outside.permission = Do kinst gjin spilers oanfalle b\u00fbten de oarlochsgebieten.
 pvp.self.notplaying = Do moatst yn it oarlochsgebiet w\u00eaze asto aanfalle wolst.
 pvp.self.respawn = Do kinst net oanfalle asto oan it respawnen bist!
-pvp.self.spawn = Do kinst net oanfalle asto noch yn ''e spawn bist!
+pvp.self.spawn = Do kinst net oanfalle asto noch yn 'e spawn bist!
 pvp.target.notplaying = Dyn wyt spilet net yn it oarlochsgebiet.
 pvp.target.otherzone = Dyn wyt spilet yn in oar oarlochsgebiet.
 pvp.target.respawn = It wyt is dwaande mei respawnen!
-pvp.target.spawn = Dyn wyt is noch hyltyd yn ''e spawn.
+pvp.target.spawn = Dyn wyt is noch hyltyd yn 'e spawn.
 sign.lobby.autoassign = Oarlochsgebiet\n{0}\nGean nei auto-\ntawiispoarte.
 sign.lobby.pick = Oarlochsgebiet\n{0} \n \nIn tiim \u00fatkieze.
 sign.lobby.warhub = \nNei Oarlochshub\n\n
