--- a/war/src/main/resources/messages_pl.properties
+++ b/war/src/main/resources/messages_pl.properties
@@ -75,7 +75,7 @@ use.ender = Nie mo\u017cesz korzysta\u0107 ze skrzyni kresu podczas gry na areni
 use.item.spawn = Nie mo\u017cesz korzysta\u0107 z przedmiot\u00f3w gdy jeste\u015b na spawn.
 use.xpkillmeter = Jest to spowodowane w\u0142\u0105czon\u0105 opcj\u0105 "XPKillMeter".
 wand.toofar = Blok na kt\u00f3ry celujesz jest za daleko.
-war.notadmin = Nie mo\u017cesz tego robi\u0107 je\u015bli nie jeste\u015b War admin''em ( permission war.admin).
+war.notadmin = Nie mo\u017cesz tego robi\u0107 je\u015bli nie jeste\u015b War admin'em ( permission war.admin).
 war.notzm = Nie mo\u017cesz tego robi\u0107 je\u015bli nie jeste\u015b tw\u00f3rc\u0105 aren (permission war.zonemaker).
 war.prefix = War>
 war.title = War
@@ -99,7 +99,7 @@ zone.leavenotice = Wpisz /war leave aby opu\u015bci\u0107 aren\u0119.
 zone.lifepool.empty = Dru\u017cyna {0} nie posiada wi\u0119cej \u017cy\u0107.Jedna \u015bmier\u0107 wi\u0119cej i przegraj\u0105 oni bitw\u0119!
 zone.loadout.equip = Wyposa\u017cenie {0} za\u0142adowane (kucnij aby zmieni\u0107)
 zone.loadout.reenter = Nie mo\u017cesz zmieni\u0107 wyposa\u017cenia po opuszczeniu spawn.
-zone.monument.badblock = Musisz przej\u0105\u0107 pomnik blokiem we\u0142ny koloru twojej dru\u017cyny.\nMo\u017cesz go zdoby\u0107 ze spawn''u swojej dru\u017cyny.
+zone.monument.badblock = Musisz przej\u0105\u0107 pomnik blokiem we\u0142ny koloru twojej dru\u017cyny.\nMo\u017cesz go zdoby\u0107 ze spawn'u swojej dru\u017cyny.
 zone.monument.capture = Pomnik {0} zosta\u0142 przej\u0119ty przez dru\u017cyn\u0119 {1}.
 zone.monument.lose = Dru\u017cyna {0} straci\u0142a kontrol\u0119 nad pomnikiem {1}.
 zone.monument.voodoo = Tw\u00f3j taniec zadowoli\u0142 pomnik boga voodoo. Zdobywasz {0} serduszko/a \u017cycia.
