Capture point improvements
* Now gives one point every interval
* New setting: capturepointtime
* i18n

--- a/war/src/main/resources/messages.properties
+++ b/war/src/main/resources/messages.properties
@@ -91,6 +91,11 @@ zone.battle.resetprogress = Reset progress: {0}%, {1} seconds...
 zone.battle.resetcomplete = Warzone reset in {0} seconds. A new battle begins.
 zone.bomb.broadcast = {0} blew up team {1}''s spawn. Team {2} scores one point.
 zone.cake.broadcast = {0} captured cake {1}. Team {2} scores one point and gets a full lifepool.
+zone.capturepoint.addpoint = Team {0} gained one point for maintaining control of capture point {1}.
+zone.capturepoint.lose = Team {0} has lost control of capture point {1}.
+zone.capturepoint.contest = Capture point {0} is being contested by {1}!
+zone.capturepoint.capture = Team {0} has captured point {1}, gaining 1 extra point.
+zone.capturepoint.fortify = Team {0} is gaining control of point {1}!
 zone.flagcapture.broadcast = {0} captured team {1}''s flag. Team {2} scores one point.
 zone.flagreturn.deadlock = You can't capture the enemy flag until your team's flag is returned.
 zone.flagreturn.flag = You have to capture the enemy flag at your team's flag.
@@ -108,6 +113,7 @@ zone.score.board404 = This warzone has not enabled a scoreboard.
 zone.score.empty = You can't score until at least one player joins another team.
 zone.spawn.minplayers = You can''t leave spawn until there''s a minimum of {0} player(s) on at least {1} team(s).
 zone.spawn.timer = You can''t leave spawn for {0} second(s) after respawning!
+zone.spawn.timer.title = Respawn in {0} second(s)...
 zone.steal.bomb.broadcast = {0} has bomb {1}.
 zone.steal.bomb.notice = You have bomb {0}. Reach another team''s spawn to score. Don''t get touched by anyone or you''ll blow up!
 zone.steal.bomb.prevent = Prevent {0} from reaching your spawn with the bomb!
