Allow changing all config options from UI

--- a/war/src/main/resources/messages_fr.properties
+++ b/war/src/main/resources/messages_fr.properties
@@ -91,6 +91,10 @@ zone.battle.resetprogress = Progression: {0}%, {1} secondes pass\u00e9...
 zone.battle.resetcomplete = Carte r\u00e9initialis\u00e9e en {0} secondes. Une nouvelle bataille va commencer !
 zone.bomb.broadcast = {0} a explos\u00e9 la base de l''\u00e9quipe {1}. L''\u00e9quipe {2} gagne 1 point.
 zone.cake.broadcast = {0} a ramen\u00e9 le g\u00e2teau {1} \u00e0 sa base. L''\u00e9quipe {2} gagne un point et r\u00e9cup\u00e8re toutes ses vies.
+zone.capturepoint.addpoint=L''\u00e9quipe {0} gagne 1 point pour prot\u00e9ger du cap {1}.
+zone.capturepoint.lose=L''\u00e9quipe {0} a perdu le contr\u00f4le du cap {1}.
+zone.capturepoint.contest=L''\u00e9quipe {1} conteste le cap {0} !
+zone.capturepoint.capture=L''\u00e9quipe {0} s''est empar\u00e9e du cap {1}, gagnant 1 point.
 zone.flagcapture.broadcast = {0} a ramen\u00e9 le drapeau de l''\u00e9quipe {1} \u00e0 sa base ! L''\u00e9quipe {2} gagne 1 point.
 zone.flagreturn.deadlock = Vous ne pouvez pas rapporter un drapeau ennemi alors que votre propre drapeau a \u00e9t\u00e9 vol\u00e9 !
 zone.flagreturn.flag = Vous devez captuer le drapeau enemie \u00e0 votre drapeau d'\u00e9quipe.
@@ -108,6 +112,7 @@ zone.score.board404 = Le tableau des scores n'est pas activ\u00e9 dans cette zon
 zone.score.empty = Vous ne pourrez pas marquer de point tant qu'aucun joueur n'aura rejoint une autre \u00e9quipe.
 zone.spawn.minplayers = Vous ne pouvez pas quitter votre base s''il n''y a pas au moins {0} joueurs dans au moins {1} \u00e9quipes.
 zone.spawn.timer = Vous devez attendre {0} secondes pour quitter votre base !
+zone.spawn.timer.title=Attendez {0} secondes...
 zone.steal.bomb.broadcast = {0} s''est empar\u00e9 de la bombe {1} !
 zone.steal.bomb.notice = Vous avez la bombe {0}. Atteignez la base d''une \u00e9quipe ennemie pour gagner des points. Si vous vous faites toucher, vous exploserez !
 zone.steal.bomb.prevent = Emp\u00eachez {0} d''atteindre votre base avec la bombe !
